# python-project-lvl2

./: .coverage  .flake8  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: cli.py  formatter.py  gendiff.py  loader.py  parser.py  stylish.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  conftests.py  test_gendiff.py
tests/fixtures/json/: file_001_file_002.json.txt
tests/fixtures/r_json/: r_file_001_r_file_002.json.txt
tests/fixtures/r_yaml/: r_file_001_r_file_002.json.txt
tests/fixtures/yaml/: file_001.yml  file_001_file_002.json.txt
