[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vladimir Bazhanov <vladimir.a.bazhanov@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
flake8 = "^6.0.0"
ipdb = "^0.13.9"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"
deepdiff = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'